// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tests is a basic snapshot 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-blue-700 text-neutral-0 dark:text-dark-neutral-0 enabled:hover:bg-blue-800 enabled:active:bg-blue-900 dark:bg-blue-400 dark:enabled:hover:bg-blue-300 dark:enabled:active:bg-blue-200 py-2 px-4 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "danger" appearance type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-red-700 text-neutral-0 dark:text-dark-neutral-0 enabled:hover:bg-red-800 enabled:active:bg-red-900 dark:bg-red-400 dark:enabled:hover:bg-red-300 dark:enabled:active:bg-red-200 py-2 px-4 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "discovery" appearance type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-purple-700 text-neutral-0 dark:text-dark-neutral-0 enabled:hover:bg-purple-800 enabled:active:bg-purple-900 dark:bg-purple-400 dark:enabled:hover:bg-purple-300 dark:enabled:active:bg-purple-200 py-2 px-4 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "ghost" appearance type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  text-dark-neutral-0 enabled:hover:text-dark-neutral-400 enabled:active:text-dark-neutral-600 dark:text-neutral-200 dark:enabled:hover:text-neutral-400 dark:enabled:active:text-neutral-600 py-2 px-4 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "large" size type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-200  bg-blue-700 text-neutral-0 dark:text-dark-neutral-0 enabled:hover:bg-blue-800 enabled:active:bg-blue-900 dark:bg-blue-400 dark:enabled:hover:bg-blue-300 dark:enabled:active:bg-blue-200 py-3 px-6 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "medium" size type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-blue-700 text-neutral-0 dark:text-dark-neutral-0 enabled:hover:bg-blue-800 enabled:active:bg-blue-900 dark:bg-blue-400 dark:enabled:hover:bg-blue-300 dark:enabled:active:bg-blue-200 py-2 px-4 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "micro" size type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-blue-700 text-neutral-0 dark:text-dark-neutral-0 enabled:hover:bg-blue-800 enabled:active:bg-blue-900 dark:bg-blue-400 dark:enabled:hover:bg-blue-300 dark:enabled:active:bg-blue-200 py-0.5 px-2 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "primary" appearance type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-blue-700 text-neutral-0 dark:text-dark-neutral-0 enabled:hover:bg-blue-800 enabled:active:bg-blue-900 dark:bg-blue-400 dark:enabled:hover:bg-blue-300 dark:enabled:active:bg-blue-200 py-2 px-4 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "secondary" appearance type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-neutral-300 text-dark-neutral-0 enabled:hover:bg-neutral-400 enabled:active:bg-neutral-500 dark:enabled:hover:bg-neutral-200 dark:enabled:active:bg-neutral-100 py-2 px-4 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "slim" size type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-blue-700 text-neutral-0 dark:text-dark-neutral-0 enabled:hover:bg-blue-800 enabled:active:bg-blue-900 dark:bg-blue-400 dark:enabled:hover:bg-blue-300 dark:enabled:active:bg-blue-200 py-1 px-3 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "success" appearance type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-green-700 text-neutral-0 dark:text-dark-neutral-0 enabled:hover:bg-green-800 enabled:active:bg-green-900 dark:bg-green-400 dark:enabled:hover:bg-green-300 dark:enabled:active:bg-green-200 py-2 px-4 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;

exports[`Button tests is a snapshot with the "warning" appearance type 1`] = `
<button
  class="items-center font-medium rounded-1 text-center cursor-pointer min-w[2.25rem] leading-2 inline-flex transition-colors duration-150 text-100  bg-yellow-500 text-neutral-1000 enabled:hover:bg-yellow-600 enabled:active:bg-yellow-700 dark:enabled:hover:bg-yellow-300 dark:enabled:active:bg-yellow-200 py-2 px-4 relative  "
>
  <span
    class="inline-flex items-center"
  >
    Button
  </span>
</button>
`;
